# benchbot_api

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  README.md  benchbot.pc.cmakein  demo.py  requirements.txt  setup.py  simulator.py
benchbot/: api_callbacks.py
benchbot_api/: __init__.py  agent.py  api_callbacks.py  benchbot.py  extras.py  tools.py
include/benchbot/: benchbot.hpp  grid_map.hpp
python/: LICENSE  README.md  setup.py
python/benchbot/: __init__.py  grid_map.py
src/: benchbot.cpp  grid_map.cpp
